// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LanguageSelection component accepts a url to the icon 1`] = `
<div
  class="LanguageSelection"
>
  <p>
    Introduction
  </p>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-42"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-43 MuiButton-iconSizeMedium"
            >
              <img
                class="LanguageIcon"
                src="path/to/al.svg"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-39 MuiButton-text buttonStyles-text-40 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-42"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-43 MuiButton-iconSizeMedium"
            >
              <img
                class="LanguageIcon"
                src="path/to/at.svg"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component accepts introduction text 1`] = `
<div
  class="LanguageSelection"
>
  <p>
    Introduction
  </p>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-text buttonStyles-text-21 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-23"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-24 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-20 MuiButton-text buttonStyles-text-21 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-23"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-24 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`LanguageSelection component renders correctly 1`] = `
<div
  class="LanguageSelection"
>
  <div>
    <h6
      class="MuiTypography-root heading Typography MuiTypography-h6"
    >
      Europe
    </h6>
    <div
      class="MuiGrid-root container MuiGrid-container MuiGrid-align-items-xs-center"
    >
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/al"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Albania
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
      <div
        class="MuiGrid-root item MuiGrid-item MuiGrid-grid-xs-12 MuiGrid-grid-md-3 MuiGrid-grid-xl-2"
      >
        <a
          aria-disabled="false"
          class="MuiButtonBase-root MuiButton-root buttonStyles-root-1 MuiButton-text buttonStyles-text-2 NavigationListButton link NavigationListButton--outline MuiButton-textPrimary"
          href="/at"
          tabindex="0"
        >
          <span
            class="MuiButton-label buttonStyles-label-4"
          >
            <span
              class="MuiButton-startIcon buttonStyles-startIcon-5 MuiButton-iconSizeMedium"
            >
              <svg
                class="LanguageIcon"
              />
            </span>
            Österreich
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </a>
      </div>
    </div>
  </div>
</div>
`;
